Module 4 Challenge Final

--- a/PyCitySchools.ipynb
+++ b/PyCitySchools.ipynb
@@ -1862,7 +1862,9 @@
    "cell_type": "code",
    "execution_count": 26,
    "id": "eea26ea9",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
